--- a/package.json
+++ b/package.json
@@ -21,13 +21,21 @@
   "homepage": "https://github.com/Shashank-Vishwakarma/code-craft-ai-backend#readme",
   "description": "",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "concurrently": "^9.2.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.11.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
-    "express": "^5.1.0"
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
+    "express": "^5.1.0",
+    "inngest": "^3.40.1",
+    "zod": "^3.25.74"
   }
 }
