--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "inngest": "^3.40.1",
+    "random-word-slugs": "^0.1.7",
     "zod": "^3.25.74"
   }
 }
